# Magnetic_Field_Geant4

./: Action.cc  Action.hh  CMakeLists.txt  Event.cc  Event.hh  Mag_sim.cc  OpNovicePhysicsList.cc  ParticleGenerator.cc  ParticleGenerator.hh  README  Run.cc  Run.hh  Stepping.cc  Stepping.hh  construction.cc  construction.hh  detector.cc  detector.hh
